--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "vue-resource": "^1.2.0"
+    "vue": "^2.2.1",
+    "vue-resource": "^1.2.0",
+    "vue-router": "^2.3.0"
   }
 }
